--- a/index.css
+++ b/index.css
@@ -1,30 +1,52 @@
-
-.contenedorImagen{
+*{
+    margin: 0;
+}
+.contenedorImagen {
     position: relative;
+    margin-left:-100px;
+    margin-top: -200px;
+
 }
 
-.imagenFondo{
+.imagenFondo {
     transform: rotate(90deg);
-    padding-left: 300px;
+    margin-left:875px;
 }
 
-.imagenCelu{
-    width:20%;
-    height:20%;
-    margin-bottom: 400px;
+.imagenCelu {
+    z-index: 1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width:165px;
+    height:200px;
+    margin-left:600px;
+    margin-top: 165px;
 }
 
-.texto{
+.texto {
     text-align: center;
 }
 
-p{
-    font-family: 'Poppins bold', sans-serif;
-    font-weight: 200;
+p {
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
     font-size: 59pt;
-    color:#0a2ff1;
+    font-weight: 200;
+    color: #0a2ff1;
 }
-span{
-    background-color:#3ffff3
-    ;
+
+.subMenu {
+
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+    font-size: 23pt;
+    font-weight: 200;
+    color: #0a2ff1;
+    min-height: 200px;
+
+}
+
+span {
+    background-color: #3ffff3;
 }
